feat: adding cards

--- a/assets/pages/main/index.html
+++ b/assets/pages/main/index.html
@@ -70,12 +70,47 @@
         </div>
       </section>
       <section id="our-friends">
+        <h3>
+          Our friends who are looking for a house Katrine Jennifer Woody Learn
+          more Learn more Learn more Get to know the rest
+        </h3>
         <div class="cards">
-          <div class="card">
-            <img />
-            <button></button>
+          <div class="circle">
+            <img alt="left-narrow" src="/assets/icons/left.png" />
+          </div>
+          <!--- the actual cards  -->
+          <div id="card">
+            <img
+              alt="Katrine"
+              src="/assets/images/pets-katrine.png"
+              width="270px"
+            />
+            <p>Katrine</p>
+            <button class="btn-main">Larn more</button>
+          </div>
+          <div id="card">
+            <img
+              alt="Jennifer"
+              src="/assets/images/pets-jennifer.png"
+              width="270px"
+            />
+            <p>Jennifer</p>
+            <button class="btn-main">Larn more</button>
+          </div>
+          <div id="card">
+            <img
+              alt="Woody"
+              src="/assets/images/pets-woody.png"
+              width="270px"
+            />
+            <p>Woody</p>
+            <button class="btn-main">Larn more</button>
+          </div>
+          <div class="circle">
+            <img alt="left-narrow" src="/assets/icons/right.png" />
           </div>
         </div>
+        <button class="btn-main">Make a Friend</button>
       </section>
     </main>
   </body>
