--- a/assets/pages/main/index.html
+++ b/assets/pages/main/index.html
@@ -71,10 +71,13 @@
         </div>
       </section>
       <section id="our-friends">
-        <h3>
-          Our friends who are looking for a house Katrine Jennifer Woody Learn
-          more Learn more Learn more Get to know the rest
-        </h3>
+        <div class="tocenter">
+          <h3>
+            Our friends who
+            <br />
+            are looking for a house
+          </h3>
+        </div>
         <div class="cards">
           <div class="circle">
             <img id="left" alt="left-narrow" src="/assets/icons/left.png" />
@@ -116,7 +119,54 @@
         </button>
       </section>
       <section id="helpforus">
-        <h2>How you can help our shelter</h2>
+        <h3>How you can help our shelter</h3>
+        <div class="icons5">
+          <div class="iconItem">
+            <img alt="petfood" src="/assets/icons/Vector.png" />
+            <h4>Pet food</h4>
+          </div>
+          <div class="iconItem">
+            <img alt="petfood" src="/assets/icons/transportation.png" />
+            <h4>Transportation</h4>
+          </div>
+          <div class="iconItem">
+            <img alt="petfood" src="/assets/icons/toys.png" />
+            <h4>Toys</h4>
+          </div>
+          <div class="iconItem">
+            <img alt="petfood" src="/assets/icons/bowls-and-cups.png" />
+            <h4>Bowls and cups</h4>
+          </div>
+
+          <div class="iconItem">
+            <img alt="shampoos" src="/assets/icons/icon-shampoos.svg" />
+            <h4>Shampoos</h4>
+          </div>
+        </div>
+        <div class="icon4">
+          <div class="iconItem">
+            <img alt="vitamins" src="/assets/icons/icon-vitamins.svg" />
+            <h4>Vitamins</h4>
+          </div>
+          <div class="iconItem">
+            <img alt="medicines" src="/assets/icons/icon-medicines.svg" />
+            <h4>Medicines</h4>
+          </div>
+          <div class="iconItem">
+            <img
+              alt="Collars/leashes"
+              src="/assets/icons/collars-or-leashes.png"
+            />
+            <h4>Collars/leashes</h4>
+          </div>
+          <div class="iconItem">
+            <img
+              alt="sleeping areas"
+              src="/assets/icons/icon-sleeping-area.svg"
+            />
+            <h4>Sleeping areas</h4>
+          </div>
+        </div>
       </section>
     </main>
   </body>
