--- a/assets/pages/main/index.html
+++ b/assets/pages/main/index.html
@@ -168,6 +168,28 @@
           </div>
         </div>
       </section>
+      <section id="donate" style="height: 480px; background-color: #f6f6f6;">
+        <img
+          alt="donation-dog"
+          src="/assets/images/donation-dog.png"
+          width="505px"
+          class="donation-content1"
+        />
+        <div class="donation-content2">
+          <h3>You can also make a donation</h3>
+          <h5>Name of the bank/Type of the bank account</h5>
+          <h4>
+            <img src="/assets/icons/credit-card.svg" />
+            2880 8028 8791 7435
+          </h4>
+          <p>
+            Legal information and lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed
+            ac diam. Praesent ultrices maximus tortor et vulputate. Interdum et
+            malesuada fames ac ante ipsum primis in faucibus.
+          </p>
+        </div>
+      </section>
     </main>
   </body>
 </html>
