fix:fixing typo

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -122,7 +122,7 @@
         <h3>How you can help our shelter</h3>
         <div class="icons5">
           <div class="iconItem">
-            <img alt="petfood" src="/assets/icons/Vector.png" />
+            <img alt="petfood" src="/assets/icons/vector.png" />
             <h4>Pet food</h4>
           </div>
           <div class="iconItem">
