feat: footer add

--- a/pages/main/main/index.html
+++ b/pages/main/main/index.html
@@ -8,7 +8,6 @@
     <script src="index.js" defer></script>
     <title>Shelter</title>
   </head>
-
   <body>
     <main class="main">
       <section class="top-section">
@@ -178,8 +177,11 @@
         <div class="donation-content2">
           <h3>You can also make a donation</h3>
           <h5>Name of the bank/Type of the bank account</h5>
-          <h4>
-            <img src="/assets/icons/credit-card.svg" />
+          <h4 class="bankcard">
+            <img
+              style="margin-right: 5px;"
+              src="/assets/icons/credit-card.svg"
+            />
             2880 8028 8791 7435
           </h4>
           <p>
@@ -190,7 +192,37 @@
           </p>
         </div>
       </section>
-      <footer id="footer"></footer>
+      <footer id="footer">
+        <div class="suggestion">
+          <h3>
+            We are waiting for your visit
+          </h3>
+          <h4>
+            <img alt="email" src="/assets/icons/icon-email.svg" />
+            email@shelter.com
+          </h4>
+          <h4>
+            <img alt="phone" src="/assets/icons/icon-phone.svg" />
+            +13 674 567 75 54
+          </h4>
+        </div>
+        <div class="visit">
+          <h3>
+            For questions and suggestions
+          </h3>
+          <h4>
+            <img alt="pin-map" src="/assets/icons/pin.png" />
+            1 Central Street, Boston (entrance from the store)
+          </h4>
+          <h4>
+            <img alt="pin-map" src="/assets/icons/pin.png" />
+            18 South Park, London
+          </h4>
+        </div>
+        <div>
+          <img src="/assets/images/footer-puppy.png" />
+        </div>
+      </footer>
     </main>
   </body>
 </html>
