fix:fixing images

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -19,9 +19,9 @@
           <nav>
             <ul>
               <li><a href="#about">About the shelter</a></li>
-              <li>Our pets</li>
-              <li>Helpt the shelter</li>
-              <li>Contacts</li>
+              <li><a href="#our-friends">Our pets</a></li>
+              <li><a href="#helpforus">Helpt the shelter</a></li>
+              <li><a href="#footer">Contacts</a></li>
             </ul>
           </nav>
         </header>
@@ -48,7 +48,7 @@
       <section id="about">
         <img
           alt="about-dogs"
-          src="/assets/images/about-pets.png"
+          src="/pages/assets/images/about-pets.png"
           width="300px"
         />
         <div class="about-txt">
@@ -220,7 +220,11 @@
           </h4>
         </div>
         <div>
-          <img src="/assets/images/footer-puppy.png" />
+          <img
+            class="footerdog"
+            alt="puppy"
+            src="/assets/images/footer-puppy.png"
+          />
         </div>
       </footer>
     </main>
