--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -28,7 +28,7 @@
         <section class="intro">
           <img
             class="puppy"
-            src="/assets/images/start-screen-puppy.png"
+            src="../../assets/images/start-screen-puppy.png"
             width="690px"
             alt="beagle-puppy"
           />
@@ -48,7 +48,7 @@
       <section id="about">
         <img
           alt="about-dogs"
-          src="/pages/assets/images/about-pets.png"
+          src="../../assets/images/about-pets.png"
           width="300px"
         />
         <div class="about-txt">
@@ -79,13 +79,17 @@
         </div>
         <div class="cards">
           <div class="circle">
-            <img id="left" alt="left-narrow" src="/assets/icons/left.png" />
+            <img
+              id="left"
+              alt="left-narrow"
+              src="../../assets/icons/left.png"
+            />
           </div>
           <!--- the actual cards  -->
           <div id="card">
             <img
               alt="Katrine"
-              src="/assets/images/pets-katrine.png"
+              src="../../assets/images/pets-katrine.png"
               width="270px"
             />
             <p>Katrine</p>
@@ -94,7 +98,7 @@
           <div id="card">
             <img
               alt="Jennifer"
-              src="/assets/images/pets-jennifer.png"
+              src="../../assets/images/pets-jennifer.png"
               width="270px"
             />
             <p>Jennifer</p>
@@ -103,14 +107,18 @@
           <div id="card">
             <img
               alt="Woody"
-              src="/assets/images/pets-woody.png"
+              src="../../assets/images/pets-woody.png"
               width="270px"
             />
             <p>Woody</p>
             <button class="btn-main">Larn more</button>
           </div>
           <div class="circle">
-            <img id="right" alt="right-narrow" src="/assets/icons/right.png" />
+            <img
+              id="right"
+              alt="right-narrow"
+              src="../../assets/icons/right.png"
+            />
           </div>
         </div>
         <button class="btn-main" style="width: max-content; padding: auto;">
@@ -121,47 +129,47 @@
         <h3>How you can help our shelter</h3>
         <div class="icons5">
           <div class="iconItem">
-            <img alt="petfood" src="/assets/icons/vector.png" />
+            <img alt="petfood" src="../../assets/icons/vector.png" />
             <h4>Pet food</h4>
           </div>
           <div class="iconItem">
-            <img alt="petfood" src="/assets/icons/transportation.png" />
+            <img alt="petfood" src="../../assets/icons/transportation.png" />
             <h4>Transportation</h4>
           </div>
           <div class="iconItem">
-            <img alt="petfood" src="/assets/icons/toys.png" />
+            <img alt="petfood" src="../../assets/icons/toys.png" />
             <h4>Toys</h4>
           </div>
           <div class="iconItem">
-            <img alt="petfood" src="/assets/icons/bowls-and-cups.png" />
+            <img alt="petfood" src="../../assets/icons/bowls-and-cups.png" />
             <h4>Bowls and cups</h4>
           </div>
 
           <div class="iconItem">
-            <img alt="shampoos" src="/assets/icons/icon-shampoos.svg" />
+            <img alt="shampoos" src="../../assets/icons/icon-shampoos.svg" />
             <h4>Shampoos</h4>
           </div>
         </div>
         <div class="icon4">
           <div class="iconItem">
-            <img alt="vitamins" src="/assets/icons/icon-vitamins.svg" />
+            <img alt="vitamins" src="../../assets/icons/icon-vitamins.svg" />
             <h4>Vitamins</h4>
           </div>
           <div class="iconItem">
-            <img alt="medicines" src="/assets/icons/icon-medicines.svg" />
+            <img alt="medicines" src="../../assets/icons/icon-medicines.svg" />
             <h4>Medicines</h4>
           </div>
           <div class="iconItem">
             <img
               alt="Collars/leashes"
-              src="/assets/icons/collars-or-leashes.png"
+              src="../../assets/icons/collars-or-leashes.png"
             />
             <h4>Collars/leashes</h4>
           </div>
           <div class="iconItem">
             <img
               alt="sleeping areas"
-              src="/assets/icons/icon-sleeping-area.svg"
+              src="../../assets/icons/icon-sleeping-area.svg"
             />
             <h4>Sleeping areas</h4>
           </div>
@@ -170,7 +178,7 @@
       <section id="donate" style="height: 480px; background-color: #f6f6f6;">
         <img
           alt="donation-dog"
-          src="/assets/images/donation-dog.png"
+          src="../../assets/images/donation-dog.png"
           width="505px"
           class="donation-content1"
         />
@@ -180,7 +188,7 @@
           <h4 class="bankcard">
             <img
               style="margin-right: 5px;"
-              src="/assets/icons/credit-card.svg"
+              src="../../assets/icons/credit-card.svg"
             />
             2880 8028 8791 7435
           </h4>
@@ -198,11 +206,11 @@
             We are waiting for your visit
           </h3>
           <h4>
-            <img alt="email" src="/assets/icons/icon-email.svg" />
+            <img alt="email" src="../../assets/icons/icon-email.svg" />
             email@shelter.com
           </h4>
           <h4>
-            <img alt="phone" src="/assets/icons/icon-phone.svg" />
+            <img alt="phone" src="../../assets/icons/icon-phone.svg" />
             +13 674 567 75 54
           </h4>
         </div>
@@ -211,11 +219,11 @@
             For questions and suggestions
           </h3>
           <h4>
-            <img alt="pin-map" src="/assets/icons/pin.png" />
+            <img alt="pin-map" src="../../assets/icons/pin.png" />
             1 Central Street, Boston (entrance from the store)
           </h4>
           <h4>
-            <img alt="pin-map" src="/assets/icons/pin.png" />
+            <img alt="pin-map" src="../../assets/icons/pin.png" />
             18 South Park, London
           </h4>
         </div>
@@ -223,7 +231,7 @@
           <img
             class="footerdog"
             alt="puppy"
-            src="/assets/images/footer-puppy.png"
+            src="../../assets/images/footer-puppy.png"
           />
         </div>
       </footer>
