--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -41,7 +41,10 @@
               extremely wide and open heart. He or she will love you more than
               anybody else in the world, you will see!
             </p>
-            <button class="btn-main">Make a Friend</button>
+
+            <button class="btn-main" type="button">
+              <a style="color: #292929;" href="#our-friends">Make a Friend</a>
+            </button>
           </div>
         </section>
       </section>
@@ -52,7 +55,9 @@
           width="300px"
         />
         <div class="about-txt">
-          <h3>About the shelter “Cozy House”</h3>
+          <h3>
+            About the shelter “Cozy House”
+          </h3>
           <p>
             Currently we have 121 dogs and 342 cats on our hands and statistics
             show that only 20% of them will find a family. The others will
@@ -86,32 +91,32 @@
             />
           </div>
           <!--- the actual cards  -->
-          <div id="card">
+          <div class="card">
             <img
               alt="Katrine"
               src="../../assets/images/pets-katrine.png"
               width="270px"
             />
             <p>Katrine</p>
-            <button class="btn-main">Larn more</button>
+            <button class="btn-card">Larn more</button>
           </div>
-          <div id="card">
+          <div class="card">
             <img
               alt="Jennifer"
               src="../../assets/images/pets-jennifer.png"
               width="270px"
             />
             <p>Jennifer</p>
-            <button class="btn-main">Larn more</button>
+            <button class="btn-card">Larn more</button>
           </div>
-          <div id="card">
+          <div class="card">
             <img
               alt="Woody"
               src="../../assets/images/pets-woody.png"
               width="270px"
             />
             <p>Woody</p>
-            <button class="btn-main">Larn more</button>
+            <button class="btn-card">Larn more</button>
           </div>
           <div class="circle">
             <img
@@ -121,8 +126,13 @@
             />
           </div>
         </div>
-        <button class="btn-main" style="width: max-content; padding: auto;">
-          Get to know the rest
+        <button
+          class="btn-main"
+          style="width: max-content; padding: auto; margin-bottom: 100px;"
+        >
+          <a href="#ancor/ourPets/fake" style="color: #292929;">
+            Get to know the rest
+          </a>
         </button>
       </section>
       <section id="helpforus">
@@ -186,10 +196,12 @@
           <h3>You can also make a donation</h3>
           <h5>Name of the bank/Type of the bank account</h5>
           <h4 class="bankcard">
-            <img
-              style="margin-right: 5px;"
-              src="../../assets/icons/credit-card.svg"
-            />
+            <a href="_" target="_blank">
+              <img
+                style="margin-right: 5px;"
+                src="../../assets/icons/credit-card.svg"
+              />
+            </a>
             2880 8028 8791 7435
           </h4>
           <p>
@@ -206,11 +218,18 @@
             We are waiting for your visit
           </h3>
           <h4>
-            <img alt="email" src="../../assets/icons/icon-email.svg" />
+            <a
+              href="mailto:xyz@yourapplicationdomain.com?subject=Me&body=Hello!"
+              target="_blank"
+            >
+              <img alt="email" src="../../assets/icons/icon-email.svg" />
+            </a>
             email@shelter.com
           </h4>
           <h4>
-            <img alt="phone" src="../../assets/icons/icon-phone.svg" />
+            <a href="tel:+136745677554" target="_blank">
+              <img alt="phone" src="../../assets/icons/icon-phone.svg" />
+            </a>
             +13 674 567 75 54
           </h4>
         </div>
@@ -219,11 +238,21 @@
             For questions and suggestions
           </h3>
           <h4>
-            <img alt="pin-map" src="../../assets/icons/pin.png" />
+            <a
+              href="http://maps.google.com/?q=1200 Pennsylvania Ave SE, Washington, District of Columbia, 20003"
+              target="_blank"
+            >
+              <img alt="pin-map" src="../../assets/icons/pin.png" />
+            </a>
             1 Central Street, Boston (entrance from the store)
           </h4>
           <h4>
-            <img alt="pin-map" src="../../assets/icons/pin.png" />
+            <a
+              href="http://maps.google.com/?q=1200 Pennsylvania Ave SE, Washington, District of Columbia, 20003"
+              target="_blank"
+            >
+              <img alt="pin-map" src="../../assets/icons/pin.png" />
+            </a>
             18 South Park, London
           </h4>
         </div>
