--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -139,19 +139,22 @@
         <h3>How you can help our shelter</h3>
         <div class="icons5">
           <div class="iconItem">
-            <img alt="petfood" src="../../assets/icons/vector.png" />
+            <img alt="petfood" src="../../assets/icons/Vector.png" />
             <h4>Pet food</h4>
           </div>
           <div class="iconItem">
-            <img alt="petfood" src="../../assets/icons/transportation.png" />
+            <img
+              alt="transportation"
+              src="../../assets/icons/transportation.png"
+            />
             <h4>Transportation</h4>
           </div>
           <div class="iconItem">
-            <img alt="petfood" src="../../assets/icons/toys.png" />
+            <img alt="toys" src="../../assets/icons/toys.png" />
             <h4>Toys</h4>
           </div>
           <div class="iconItem">
-            <img alt="petfood" src="../../assets/icons/bowls-and-cups.png" />
+            <img alt="bowls" src="../../assets/icons/bowls-and-cups.png" />
             <h4>Bowls and cups</h4>
           </div>
 
@@ -196,7 +199,7 @@
           <h3>You can also make a donation</h3>
           <h5>Name of the bank/Type of the bank account</h5>
           <h4 class="bankcard">
-            <a href="_" target="_blank">
+            <a href="_" target="">
               <img
                 style="margin-right: 5px;"
                 src="../../assets/icons/credit-card.svg"
