fix:icon bug fix

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -199,7 +199,7 @@
           <h3>You can also make a donation</h3>
           <h5>Name of the bank/Type of the bank account</h5>
           <h4 class="bankcard">
-            <a href="_" target="">
+            <a href="www.com" target="_blank">
               <img
                 style="margin-right: 5px;"
                 src="../../assets/icons/credit-card.svg"
