fix:change in stylesheet

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -118,7 +118,7 @@
             <p>Woody</p>
             <button class="btn-card">Larn more</button>
           </div>
-          <div class="circle">
+          <div class="circleb" style="box-shadow: none;">
             <img
               id="right"
               alt="right-narrow"
