fix: change cursor

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -13,7 +13,9 @@
       <section class="top-section">
         <header>
           <section class="logo">
-            <h1>Cozy House</h1>
+            <h1 onclick="window.location.reload();" id="logo">
+             Cozy House</a>
+            </h1>
             <h5>Shelter for Pets in Boston</h5>
           </section>
           <nav>
