init: create pets page

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -21,7 +21,7 @@
           <nav>
             <ul>
               <li><a href="#about">About the shelter</a></li>
-              <li><a href="#our-friends">Our pets</a></li>
+              <li><a href="../pets/index.html">Our pets</a></li>
               <li><a href="#helpforus">Helpt the shelter</a></li>
               <li><a href="#footer">Contacts</a></li>
             </ul>
@@ -43,7 +43,6 @@
               extremely wide and open heart. He or she will love you more than
               anybody else in the world, you will see!
             </p>
-
             <button class="btn-main" type="button">
               <a style="color: #292929;" href="#our-friends">Make a Friend</a>
             </button>
