--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -8,7 +8,7 @@
     <title>Shelter pets page</title>
   </head>
   <body>
-      <section class="top-section">
+     
         <header>
           <section class="logo">
             <h1 onclick="window.location.reload();" id="logo">
@@ -27,7 +27,7 @@
         </header>
         <main>
             <div id="pets">
-            <h2>Our friends who are looking for a house</h2>
+            <h2>Our friends who <br>are looking for a house</h2>
            <div class="cards">
             <div class="card">
             <img
@@ -62,46 +62,46 @@
               src="../../assets/images/sophia.png"
               width="270px"
             />
-            <p>Woody</p>
+            <p>Sophia</p>
             <button class="btn-card">Larn more</button>
           </div>
            <div class="card">
             <img
-              alt="Sophia"
-              src="../../assets/images/sophia.png"
+              alt="Timmy"
+              src="../../assets/images/pets-timmy.png"
               width="270px"
             />
-            <p>Woody</p>
+            <p>Timmy</p>
             <button class="btn-card">Larn more</button>
           </div> <div class="card">
             <img
-              alt="Sophia"
-              src="../../assets/images/sophia.png"
+              alt="pets-charly"
+              src="../../assets/images/pets-charly.png"
               width="270px"
             />
-            <p>Woody</p>
+            <p>Charly</p>
             <button class="btn-card">Larn more</button>
           </div> <div class="card">
             <img
-              alt="Sophia"
-              src="../../assets/images/sophia.png"
+              alt="pets-charly"
+              src="../../assets/images/pets-scarlet.png"
               width="270px"
             />
-            <p>Woody</p>
+            <p>Scarlet</p>
             <button class="btn-card">Larn more</button>
           </div> <div class="card">
             <img
-              alt="Sophia"
-              src="../../assets/images/sophia.png"
+              alt="pets-freddie"
+              src="../../assets/images/pets-freddie.png"
               width="270px"
             />
-            <p>Woody</p>
+            <p>Freddie</p>
             <button class="btn-card">Larn more</button>
           </div>
           </div>
            <div class="pagination">
           <a  href="#" disabled ><<</a>
-          <a href=""  disabled ><</a>
+          <a href=""  disabled><</a>
           <a href="">1</a>
           <a href="">></a>
           <a href="">>></a>
@@ -112,7 +112,7 @@
          <footer id="footer">
         <div class="suggestion">
           <h3>
-            We are waiting for your visit
+            For questions and suggestions
           </h3>
           <h4>
             <a
@@ -132,7 +132,8 @@
         </div>
         <div class="visit">
           <h3>
-            For questions and suggestions
+            
+            We are waiting for your visit
           </h3>
           <h4>
             <a
