fix: postion fixes

--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -18,9 +18,9 @@
           </section>
           <nav>
             <ul>
-              <li><a href="../main/index.html#about">About the shelter</a></li>
-              <li><a href="../pets/index.html">Our pets</a></li>
-              <li><a href="#helpforus">Helpt the shelter</a></li>
+              <li><a href="../main/index.html#about" >About the shelter</a></li>
+              <li><a href="../pets/index.html" class="disabled">Our pets</a></li>
+              <li><a href="../main/index.html#helpforus">Helpt the shelter</a></li>
               <li><a href="#footer">Contacts</a></li>
             </ul>
           </nav>
@@ -45,7 +45,7 @@
               width="270px"
             />
             <p>Jennifer</p>
-            <button class="btn-card">Larn more</button>
+            <button class="btn-card"><a>Larn more</a></button>
           </div>
           <div class="card">
             <img
@@ -112,7 +112,7 @@
          <footer id="footer">
         <div class="suggestion">
           <h3>
-            For questions and suggestions
+            For questions<br> and suggestions
           </h3>
           <h4>
             <a
@@ -133,7 +133,7 @@
         <div class="visit">
           <h3>
             
-            We are waiting for your visit
+            We are waiting<br>for your visit
           </h3>
           <h4>
             <a
