--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -110,7 +110,7 @@
      
         </div>
          <footer id="footer">
-        <div class="suggestion">
+        <div class="suggestion footerItem">
           <h3>
             For questions<br> and suggestions
           </h3>
@@ -130,7 +130,7 @@
             +13 674 567 75 54
           </h4>
         </div>
-        <div class="visit">
+        <div class="visit footerItem">
           <h3>
             
             We are waiting<br>for your visit
@@ -156,7 +156,7 @@
         </div>
         <div>
           <img
-            class="footerdog"
+             class=" footerdog footerItem"
             alt="puppy"
             src="../../assets/images/footer-puppy.png"
           />
