--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -39,7 +39,7 @@
           />
           <div class="intro-text" >
             <h2>
-              Not only people need a house
+              Not only people <br>need a house
             </h2>
             <p>
               We offer to give a chance to a little and nice puppy with an
