feat:footer responsiveness adds on

--- a/pages/pets/index.html
+++ b/pages/pets/index.html
@@ -161,13 +161,13 @@
             18 South Park, London
           </h4>
         </div>
-        <div>
+       <div id="dog" >
           <img
-             class=" footerdog footerItem"
+             width="400px"
             alt="puppy"
             src="../../assets/images/footer-puppy.png"
           />
-        </div>
+       </div>
       </footer>
         </main>
   </body>
