feat:adding fixes to popup

--- a/pages/main/index.html
+++ b/pages/main/index.html
@@ -113,6 +113,7 @@
           </a>
         </button>
       </section>
+      <div id="cover"></div>
       <section id="helpforus">
         <h3>How you can help<br> our shelter</h3>
         <div id="icons">
